--- a/flix/src/App.css
+++ b/flix/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.title {
+  display: flex;
+  justify-content: center;
+  font-size: 10px;
+  color: antiquewhite;
+}
