--- a/flix/src/Components/TrendingAPIContent.css
+++ b/flix/src/Components/TrendingAPIContent.css
@@ -4,7 +4,7 @@
     width: 150px;
     padding: 1px;
     margin: 2px 0;
-    background-color: #2cdf1c;
+    background-color: #a9dfa5;
     border-radius: 15px;
     position: relative;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
