--- a/flix/src/Components/Navigation/Header.css
+++ b/flix/src/Components/Navigation/Header.css
@@ -13,6 +13,7 @@
     padding: 15px 0 15px 0;
     box-shadow: 0px 1px 5px black;
     color: white;
+    z-index: 100;
   }
   
   @media (max-width: 1000px) {
